--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -226,7 +226,6 @@ allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 18.204.73.218;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -812,6 +811,7 @@ allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 200.25.27.112;
 allow 201.137.12.46;
 allow 202.61.226.98;
+allow 202.61.252.121;
 allow 202.69.76.36;
 allow 204.137.14.104;
 allow 204.137.14.105;
@@ -912,6 +912,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
@@ -935,6 +936,7 @@ allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:4441::1;
 allow 2602:fc24:11:96f9::1;
@@ -1126,6 +1128,7 @@ allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:55:efb::1000;
+allow 2a03:4000:55:efb::a1;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -1484,6 +1487,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.214.194.157;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1577,7 +1581,6 @@ allow 51.75.64.23;
 allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
-allow 5.181.80.107;
 allow 5.182.86.212;
 allow 51.89.153.112;
 allow 51.91.18.151;
