--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -226,7 +226,6 @@ deny 179.43.167.205;
 deny 179.43.182.232;
 deny 179.43.182.58;
 deny 180.150.226.99;
-deny 18.204.73.218;
 deny 184.105.48.40;
 deny 185.100.85.132;
 deny 185.100.85.22;
@@ -812,6 +811,7 @@ deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 200.25.27.112;
 deny 201.137.12.46;
 deny 202.61.226.98;
+deny 202.61.252.121;
 deny 202.69.76.36;
 deny 204.137.14.104;
 deny 204.137.14.105;
@@ -912,6 +912,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.184.48.101;
 deny 23.184.48.127;
 deny 23.184.48.128;
@@ -935,6 +936,7 @@ deny 2600:3c00:e000:4ee::2;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:11:4441::1;
 deny 2602:fc24:11:96f9::1;
@@ -1126,6 +1128,7 @@ deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
 deny 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 deny 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 deny 2a03:4000:55:efb::1000;
+deny 2a03:4000:55:efb::a1;
 deny 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 deny 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 deny 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -1484,6 +1487,7 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.254.131;
 deny 38.97.116.244;
+deny 44.214.194.157;
 deny 45.12.3.80;
 deny 45.128.232.151;
 deny 45.130.20.250;
@@ -1577,7 +1581,6 @@ deny 51.75.64.23;
 deny 51.81.222.62;
 deny 51.81.254.14;
 deny 51.81.254.15;
-deny 5.181.80.107;
 deny 5.182.86.212;
 deny 51.89.153.112;
 deny 51.91.18.151;
