--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -22,7 +23,6 @@ set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.237.158.32;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
-set_real_ip_from 104.244.72.37;
 set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
 set_real_ip_from 104.244.73.193;
@@ -144,6 +144,7 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 155.4.102.252;
+set_real_ip_from 156.146.63.172;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
@@ -550,14 +551,12 @@ set_real_ip_from 188.68.52.231;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
-set_real_ip_from 191.101.31.49;
 set_real_ip_from 191.252.92.147;
 set_real_ip_from 191.96.165.34;
 set_real_ip_from 192.210.255.181;
 set_real_ip_from 192.42.116.13;
 set_real_ip_from 192.42.116.14;
 set_real_ip_from 192.42.116.15;
-set_real_ip_from 192.42.116.17;
 set_real_ip_from 192.42.116.173;
 set_real_ip_from 192.42.116.174;
 set_real_ip_from 192.42.116.175;
@@ -779,7 +778,6 @@ set_real_ip_from 2001:67c:6ec:203:192:42:116:221;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5513;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5517;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5518;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5520;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5523;
@@ -878,6 +876,26 @@ set_real_ip_from 23.129.64.146;
 set_real_ip_from 23.129.64.147;
 set_real_ip_from 23.129.64.148;
 set_real_ip_from 23.129.64.149;
+set_real_ip_from 23.129.64.210;
+set_real_ip_from 23.129.64.211;
+set_real_ip_from 23.129.64.212;
+set_real_ip_from 23.129.64.213;
+set_real_ip_from 23.129.64.214;
+set_real_ip_from 23.129.64.215;
+set_real_ip_from 23.129.64.216;
+set_real_ip_from 23.129.64.217;
+set_real_ip_from 23.129.64.218;
+set_real_ip_from 23.129.64.219;
+set_real_ip_from 23.129.64.220;
+set_real_ip_from 23.129.64.221;
+set_real_ip_from 23.129.64.222;
+set_real_ip_from 23.129.64.223;
+set_real_ip_from 23.129.64.224;
+set_real_ip_from 23.129.64.225;
+set_real_ip_from 23.129.64.226;
+set_real_ip_from 23.129.64.227;
+set_real_ip_from 23.129.64.228;
+set_real_ip_from 23.129.64.229;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.152;
 set_real_ip_from 23.137.249.143;
@@ -911,11 +929,9 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.101;
 set_real_ip_from 23.184.48.127;
 set_real_ip_from 23.184.48.128;
-set_real_ip_from 23.20.97.48;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -935,7 +951,6 @@ set_real_ip_from 2600:3c00:e000:4ee::2;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:11:4441::1;
 set_real_ip_from 2602:fc24:11:96f9::1;
@@ -1000,6 +1015,7 @@ set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 set_real_ip_from 2605:6400:30:f174::;
 set_real_ip_from 2605:6400:30:f174:1:1:1:1;
 set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
+set_real_ip_from 2605:6400:30:f174:1:2:3:4;
 set_real_ip_from 2605:6400:30:f174::42;
 set_real_ip_from 2605:6400:30:f174:42:42::;
 set_real_ip_from 2605:6400:30:f174:42:42:42:0;
@@ -1034,7 +1050,6 @@ set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f8e6:9fae:c86f:2d71:6c28;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:30:fa92:5f11:1ed9:9615:fcc6;
-set_real_ip_from 2605:6400:30:fcd3:1a37:db42:4822:2fc5;
 set_real_ip_from 2605:6400:30:fdd8::2;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
@@ -1065,6 +1080,26 @@ set_real_ip_from 2620:18c:0:192::146;
 set_real_ip_from 2620:18c:0:192::147;
 set_real_ip_from 2620:18c:0:192::148;
 set_real_ip_from 2620:18c:0:192::149;
+set_real_ip_from 2620:18c:0:192::210;
+set_real_ip_from 2620:18c:0:192::211;
+set_real_ip_from 2620:18c:0:192::212;
+set_real_ip_from 2620:18c:0:192::213;
+set_real_ip_from 2620:18c:0:192::214;
+set_real_ip_from 2620:18c:0:192::215;
+set_real_ip_from 2620:18c:0:192::216;
+set_real_ip_from 2620:18c:0:192::217;
+set_real_ip_from 2620:18c:0:192::218;
+set_real_ip_from 2620:18c:0:192::219;
+set_real_ip_from 2620:18c:0:192::220;
+set_real_ip_from 2620:18c:0:192::221;
+set_real_ip_from 2620:18c:0:192::222;
+set_real_ip_from 2620:18c:0:192::223;
+set_real_ip_from 2620:18c:0:192::224;
+set_real_ip_from 2620:18c:0:192::225;
+set_real_ip_from 2620:18c:0:192::226;
+set_real_ip_from 2620:18c:0:192::227;
+set_real_ip_from 2620:18c:0:192::228;
+set_real_ip_from 2620:18c:0:192::229;
 set_real_ip_from 2620:59:a000:9666:216:3eff:fe7d:dae8;
 set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
@@ -1470,6 +1505,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.202.40.236;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1478,7 +1514,6 @@ set_real_ip_from 37.120.239.59;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.63;
-set_real_ip_from 37.27.20.230;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
@@ -1583,7 +1618,6 @@ set_real_ip_from 5.196.73.12;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1622,7 +1656,6 @@ set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.83.179;
-set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.5.123.66;
 set_real_ip_from 66.146.193.33;
