--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -32,7 +33,6 @@ allow 104.244.74.97;
 allow 104.244.75.74;
 allow 104.244.77.192;
 allow 104.244.77.208;
-allow 104.244.77.80;
 allow 104.244.78.162;
 allow 104.244.78.233;
 allow 104.244.79.44;
@@ -43,7 +43,6 @@ allow 107.172.31.146;
 allow 107.172.31.165;
 allow 107.174.138.172;
 allow 107.174.231.197;
-allow 107.189.10.141;
 allow 107.189.10.175;
 allow 107.189.11.111;
 allow 107.189.11.166;
@@ -211,6 +210,7 @@ allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 178.236.247.122;
+allow 178.31.160.161;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -630,6 +630,7 @@ allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.181;
 allow 193.218.118.182;
+allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.218.118.91;
 allow 193.233.133.109;
@@ -934,7 +935,6 @@ allow 23.155.24.6;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
-allow 23.22.166.208;
 allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1050,9 +1050,7 @@ allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
-allow 2605:6400:30:f8e6:9fae:c86f:2d71:6c28;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
-allow 2605:6400:30:fa92:5f11:1ed9:9615:fcc6;
 allow 2605:6400:30:fcd3:1a37:db42:4822:2fc5;
 allow 2605:6400:30:fdd8::2;
 allow 2605:6400:40:fe09::2;
@@ -1163,7 +1161,7 @@ allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
-allow 2a03:4000:55:efb::1000;
+allow 2a03:4000:55:efb::1003;
 allow 2a03:4000:55:efb::a1;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
@@ -1485,6 +1483,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a10:8a40:f313::29;
@@ -1509,6 +1508,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 3.231.134.173;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1541,6 +1541,7 @@ allow 45.140.188.145;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
+allow 45.141.215.167;
 allow 45.141.215.169;
 allow 45.141.215.200;
 allow 45.141.215.21;
@@ -1683,7 +1684,6 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.238.198;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
