--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -113,6 +113,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -124,6 +125,7 @@ set_real_ip_from 2600:3c00:e000:4ee::2;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:11:4441::1;
 set_real_ip_from 2602:fc24:11:96f9::1;
@@ -169,7 +171,6 @@ set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
 set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:ff9::1;
 set_real_ip_from 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
-set_real_ip_from 2605:6400:30:e8d1:4e2b:5616:7dd4:3c4c;
 set_real_ip_from 2605:6400:30:e948:4cee:191b:1e55:25b3;
 set_real_ip_from 2605:6400:30:ea52:4246:fb82:f36c:8ede;
 set_real_ip_from 2605:6400:30:ea58:51a1:e174:d185:d6f1;
@@ -220,7 +221,6 @@ set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
-set_real_ip_from 2605:6400:30:f8e6:9fae:c86f:2d71:6c28;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:30:fcd3:1a37:db42:4822:2fc5;
 set_real_ip_from 2605:6400:30:fdd8::2;
